styles/style.css
@use "sass:math";
.mvh-25 {
  max-height: 25vh;
}

.mvh-50 {
  max-height: 50vh;
}

.mvh-75 {
  max-height: 75vh;
}

.mvh-100 {
  max-height: 100vh;
}

.mvw-25 {
  max-width: 25vw;
}

.mvw-50 {
  max-width: 50vw;
}

.mvw-75 {
  max-width: 75vw;
}

.mvw-100 {
  max-width: 100vw;
}

.box-shadow {
  border-radius: var(--border-radius-primary);
  -webkit-box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.2);
          box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.2);
}

.justify-content-space-evenly {
  -webkit-box-pack: space-evenly;
      -ms-flex-pack: space-evenly;
          justify-content: space-evenly;
}

.justify-items-center {
  justify-items: center;
}

.square-box {
  height: 0%;
  padding-bottom: 100%;
  position: relative;
  width: 100%;
}

.square-box * {
  height: 100%;
  width: 100%;
  position: absolute;
}

.start-btn {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  background-color: var(--color-secondary);
  border-radius: var(--border-radius-primary);
  color: black;
  cursor: pointer;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  font-size: 2em;
  font-weight: normal;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  position: relative;
  border: none;
}

.start-btn.running {
  background-color: var(--dl-color-2);
}

.btn-prime {
  position: relative;
  overflow: hidden;
  border: none;
  background-image: none;
  outline: 0;
  --border-size: 0.2rem;
  --box-shadow-hl: 2px;
  --box-shadow-vl: 0px;
  --box-shadow-br: 10px;
  --box-shadow-sr: 0px;
  --box-shadow-color: rgba(0, 0, 0, 0.5);
  -webkit-transition: all cubic-bezier(0.09, 0.91, 0.5, 1.1) 500ms;
  transition: all cubic-bezier(0.09, 0.91, 0.5, 1.1) 500ms;
  -webkit-box-shadow: var(--box-shadow-hl) var(--box-shadow-vl) var(--box-shadow-br) var(--box-shadow-sr) var(--box-shadow-color);
          box-shadow: var(--box-shadow-hl) var(--box-shadow-vl) var(--box-shadow-br) var(--box-shadow-sr) var(--box-shadow-color);
}

.btn-prime:hover {
  --box-shadow-vl: 7px;
  -webkit-transform: translateY(-5px);
          transform: translateY(-5px);
  -webkit-box-shadow: var(--box-shadow-hl) var(--box-shadow-vl) var(--box-shadow-br) var(--box-shadow-sr) var(--box-shadow-color);
          box-shadow: var(--box-shadow-hl) var(--box-shadow-vl) var(--box-shadow-br) var(--box-shadow-sr) var(--box-shadow-color);
}

.ripple {
  border-radius: 100%;
  background-color: rgba(255, 255, 255, 0.5);
  width: 0;
  height: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  margin: auto;
}

:root {
  --background-color-primary: rgba(51, 51, 51, 1);
  --background-color-primary-dark: rgb(37, 37, 37);
  --background-color-secondary: rgb(66, 66, 66, 1);
  --font-color-primary: #fff;
  --color-primary: #fff;
  --color-secondary: #34c83c;
  --color-secondary-dark: #2ead34;
  --font-family-primary: "Helvetica", sans-serif;
  --dl-color-1: #8630e6;
  --dl-color-2: #f71e6a;
  --ul-color-1: #ff8000;
  --ul-color-2: #ff0000;
  --meter-background-color: rgb(0, 0, 0, 0.25);
  --progress-bar-gradient: linear-gradient(
        to right,
        var(--dl-color-1),
        var(--ul-color-1)
    );
  --meter-width: 32rem;
  --meter-height: 64rem;
  --meter-padding: 10rem;
  --meter-outer-radius: 30rem;
  --ncsu-font: "UniversCondensed";
  --ncsu-red: #c00;
  --ncsu-red-dark: rgb(173, 0, 0);
  --border-radius-primary: 0.75rem;
}

html {
  height: 100%;
  width: 100%;
}

body {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  background: var(--background-color-primary);
  color: var(--font-color-primary);
  font-family: var(--font-family-primary);
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  overflow-x: hidden;
}

main {
  display: -ms-grid;
  display: grid;
  height: 100%;
  width: 100%;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
      grid-template-areas: "test" "info" "button";
  -ms-grid-rows: (3)[1fr];
      grid-template-rows: repeat(1fr, 3);
  max-height: 64rem;
  max-width: 32rem;
  row-gap: 1rem;
  padding: 0.5rem;
}

main .test-container {
  -ms-flex-item-align: end;
      -ms-grid-row-align: end;
      align-self: end;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  grid-area: test;
}

main .test-info-progress-container {
  -ms-grid-row: 2;
  -ms-grid-column: 1;
  grid-area: info;
}

main .start-btn-container {
  height: 3rem;
  width: 75%;
  -ms-flex-item-align: start;
      align-self: flex-start;
  -ms-grid-row: 3;
  -ms-grid-column: 1;
  grid-area: button;
  -ms-grid-column-align: center;
      justify-self: center;
}

.pane-container {
  background: var(--background-color-secondary);
  border-radius: var(--border-radius-primary);
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  grid-area: test;
}

.pane-info {
  --padding: 1rem;
  padding: var(--padding);
  height: 100%;
  width: 100%;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.pane-info h1,
.pane-info h2 {
  text-align: left;
}

.pane-info h1 {
  font-size: 3rem;
}

.pane-info h2 {
  font-size: 2rem;
}

.pane-info hr {
  --main-color: white;
  height: 0.1em;
  width: calc(100% + var(--padding));
  background-color: var(--main-color);
  border: none;
  border-radius: 1rem;
  margin-right: calc(-1 * var(--padding));
}

.modal {
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  position: absolute;
  background-color: rgba(0, 0, 0, 0.705);
  -webkit-transition: all ease-out 250ms;
  transition: all ease-out 250ms;
  z-index: 999;
  -webkit-transform: translateY(-100%);
          transform: translateY(-100%);
}

.modal .modal-content {
  opacity: 100%;
  height: 75%;
  width: 75%;
}

.modal.visible {
  -webkit-transform: translateY(0);
          transform: translateY(0);
}

.hidden {
  pointer-events: none;
  visibility: hidden;
}

.test-container {
  position: relative;
}

.test-container .info {
  --border-radius: 1rem;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  margin: 0 auto;
  height: calc(100% *0.15611);
  width: 75%;
  bottom: 0;
  right: 0;
  left: 0;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  background-color: var(--background-color-primary-dark);
  border-top-left-radius: var(--border-radius);
  border-top-right-radius: var(--border-radius);
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.test-container .info .unit-container {
  --font-size-lg: 3.5rem;
  margin: 0;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-align: baseline;
      -ms-flex-align: baseline;
          align-items: baseline;
  margin-left: var(--font-size-sm);
}

.test-container .square-box {
  z-index: 1;
}

.test-container .square-box canvas {
  padding: 0.5rem;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.test-info-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
}

.test-info-container .info {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding: 0.25rem;
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.test-info-container .info .test-kind {
  padding: 0.25rem 0;
  font-size: 1rem;
  font-weight: bold;
}

.test-info-container .info .unit-container {
  padding: 0.5rem;
  background: var(--background-color-secondary);
  border-radius: var(--border-radius-primary);
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
  text-align: left;
}

.progress-bar-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin: 0.5rem 0;
  height: 1rem;
  width: 100%;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
}

.progress-bar-container .progress-bar {
  height: 1rem;
  width: 0;
  border-radius: 0;
}

.unit-container {
  --font-size-lg: 2.5rem;
  --font-size-sm: calc(var(--font-size-lg) / 4);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin: 0;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  margin-bottom: var(--font-size-sm);
  text-align: center;
  -webkit-transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
  transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
}

.unit-container.in-progress {
  color: rgba(255, 255, 255, 0.25);
}

.unit-container .amount {
  font-size: var(--font-size-lg);
}

.unit-container .unit {
  font-size: var(--font-size-sm);
}

@media all and (orientation: landscape) and (max-height: 992px) {
  main {
    -webkit-column-gap: 1rem;
            column-gap: 1rem;
        grid-template-areas: "test info" "test button";
    -ms-grid-columns: 1fr 1fr;
        grid-template-columns: 1fr 1fr;
    -ms-grid-rows: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
    max-height: 32rem;
    max-width: 64rem;
  }
  main .test-container {
    -ms-flex-item-align: center;
        -ms-grid-row-align: center;
        align-self: center;
  }
  .test-info-progress-container .test-info-container {
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
  }
  .test-info-progress-container .test-info-container .info {
    margin: 0.25em;
    width: 75%;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    background: var(--background-color-secondary);
    border-radius: var(--border-radius-primary);
  }
  .test-info-progress-container .test-info-container .info .test-kind {
    -webkit-box-flex: 1;
        -ms-flex: 1;
            flex: 1;
    text-align: left;
  }
  .test-info-progress-container .test-info-container .info .unit-container {
    -webkit-box-flex: 1;
        -ms-flex: 1;
            flex: 1;
    text-align: center;
  }
}

